# reference-data-bitemporal-demo

./: README.md  pyproject.toml  requirements.txt
bitemporal/: __init__.py  merge_logic.py
dags/: reference_data_pipeline.py
data/: synthetic_refdata.csv
scripts/: query_as_of.py  run_pipeline.py
tests/: conftest.py  test_as_of.py  test_merge.py  test_watermark.py
