[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reference-data-bitemporal-demo"
version = "0.1.0"
description = "Minimal bi-temporal reference data pipeline demo."
authors = [
  { name = "Gustav Lantz" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
airflow = ["apache-airflow>=2.9,<2.10"]
dev = ["pytest>=8.2"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
